# persona

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml  sync_to_hub.yaml
backend/: .env.example  Dockerfile  agent.py  lambda_handler.py  llm_clients.py  main.py  memory.py  package_lambda.py  prompt_templates.py  pyproject.toml
backend/memory/: __init__.py  dynamodb_backend.py  sqlite_backend.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  global.css  main.ts
frontend/src/lib/: Chat.module.css  Chat.svelte  chat-logic.ts
scripts/: deploy-aws.ps1  deploy-aws.sh
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
