[project]
name = "persona-backend"
version = "0.1.0"
description = "Persona — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "boto3>=1.35.0",
    "cerebras-cloud-sdk>=1.67.0",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]


[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
